5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1753_1530.log
== TEST (2019-05-16 19:09:09) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = 0
anos = 0
while total<80000:
	total = total + (x*px/100) + (y*py/100)
print(total)	
-- OUTPUT:
80027.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:09:16) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = 0
anos = 0
while total<80000:
	total = total + (x*px/100) + (y*py/100)
print(total)	
-- OUTPUT:
80027.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:10:25) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = 0
anos = 0
while total<80000:
	total = total + (x*px/100) + (y*py/100)
	anos = anos + 1
print(anos)	
	
-- OUTPUT:
1883
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:10:30) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = 0
anos = 0
while total<80000:
	total = total + (x*px/100) + (y*py/100)
	anos = anos + 1
print(anos)	
	
-- OUTPUT:
1883
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:10:41) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = 0
anos = 0
while total<80000:
	total = total + (x*px/100) + (y*py/100)
	anos = anos + 1
print(anos)	
	
-- OUTPUT:
1883
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:11:19) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = 0
anos = 0
while total<80000:
	total = total + (x*px/100) + (y*py/100)
	anos = anos + 1
print(anos)	
	
-- OUTPUT:
1883
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:12:21) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = 0
anos = 0
while total!=80000:
	total = total + (x*px/100) + (y*py/100)
	anos= anos +1
print(anos)	
	
-- OUTPUT:
1883
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:14:20) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 1
while total<=80000:
	total = total + (x*px/100) + (y*py/100)
	anos = anos + 1
print(anos)	
	
-- OUTPUT:
1825
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:14:51) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 1
while total<=80000:
	total = total + (x*(px/100) + (y*(py/100))
	anos = anos + 1
print(anos)	
	
-- ERROR:
File "XXXX", line 9
    anos = anos + 1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:15:03) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 1
while total<=80000:
	total = total + (x*(px/100) + (y*(py/100)))
	anos = anos + 1
print(anos)	
	
-- OUTPUT:
1825
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:15) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 
while total<80000:
	x = x*(px/100)
	y = y*(py/100)
	total = x + y
	anos = anos+1
print(anos)	
	
-- ERROR:
File "XXXX", line 6
    anos = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:25) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 0
while total<80000:
	x = x*(px/100)
	y = y*(py/100)
	total = x + y
	anos = anos+1
print(anos)	
	
-- ERROR:
File "XXXX", line 6
    anos = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:36) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 0
while total<80000:
	x = x*(px/100)
	y = y*(py/100)
	total = x + y
	anos = anos+1
print(anos)	
	
-- ERROR:
File "XXXX", line 6
    anos = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:51) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 0
while total<80000:
	x = x*(px/100)
	y = y*(py/100)
	total = x + y
	anos = anos+1
print(anos)	
	
-- ERROR:
File "XXXX", line 6
    anos = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:04) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 0
while total<80000:
	x = x*(px/100)
	y = y*(py/100)
	total = x + y
	anos = anos+1
print(anos)	
	
-- ERROR:
File "XXXX", line 6
    anos = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:21) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 0
while total<80000:
	x = x*(px/100)
	y = y*(py/100)
	total = total + x + y
	anos = anos+1
print(anos)	
	
-- ERROR:
File "XXXX", line 6
    anos = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:19:29) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 0
while total<80000:
	x = x*(px/100)
	y = y*(py/100)
	total = total + x + y
	anos = anos+1
print(anos)	
	
-- ERROR:
File "XXXX", line 6
    anos = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:47:07) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 0
while total<80000:
	xa = x*(px/100)
	ya = y*(py/100)
	total = total + xa + ya
	anos = anos+1
print(anos)	
	
-- OUTPUT:
1824
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:48:36) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 0
xa = x * (px/100)
ya = y * (py/100)
while total<80000:
	total = total + xa + ya
	anos = anos+1
print(anos)	
	
-- OUTPUT:
1824
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 21:37:01) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 0
while total<80000:
	x = x*(px/100)
	y = y*(px/100)
	total = total + x + y
	anos = anos+1
print(anos)	
	
-- EXECUTION TIME:
2189.14
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 21:38:01) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 0
while total<80000:
	x = x*(px/100)
	y = y*(px/100)
	total = total + x + y
	anos = anos+1
print(anos)	
	
-- EXECUTION TIME:
2124.84
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 21:39:01) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 0
while total<80000:
	x = x*(px/100)
	y = y*(px/100)
	total = total + x + y
	anos = anos+1
print(anos)	
	
-- EXECUTION TIME:
2184.76
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 21:40:01) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 0
while total<80000:
	x = x*(px/100)
	y = y*(px/100)
	total = total + x + y
	anos = anos+1
print(anos)	
	
-- EXECUTION TIME:
2244.68
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 21:40:01) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 0
while total<80000:
	x = x*(px/100)
	y = y*(px/100)
	total = total + x + y
	anos = anos+1
print(anos)	
	
-- EXECUTION TIME:
2244.5
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 21:40:01) 
-- CODE:
x = int(input("p"))
y = int(input("v"))
px = float(input("pp"))
py = float(input("pv"))
total = x + y
anos = 0
while total<80000:
	x = x*(px/100)
	y = y*(px/100)
	total = total + x + y
	anos = anos+1
print(anos)	
	
-- EXECUTION TIME:
2125.53
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
